--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
   <body>
     <!-- header -->
     <header>
-      <nav>
-        <div>
-          <img src="assets/logo.svg" alt="nav logo" />
-        </div>
-        <ul>
-          <li>About</li>
-          <li>Careers</li>
-          <li>Events</li>
-          <li>Product</li>
-          <li>Support</li>
-        </ul>
-        <div>
-          <img src="assets/icon-hamburger.svg" alt="menu logo" />
-        </div>
-      </nav>
-      <div>
+      <section class="container">
+        <nav>
+          <div>
+            <img src="assets/logo.svg" alt="nav logo" />
+          </div>
+          <ul>
+            <li>About</li>
+            <li>Careers</li>
+            <li>Events</li>
+            <li>Product</li>
+            <li>Support</li>
+          </ul>
+          <div>
+            <img src="assets/icon-hamburger.svg" alt="menu logo" />
+          </div>
+        </nav>
+              <div>
         <h1>IMMERSIVE EXPIRIENCES THAT DELIVER</h1>
       </div>
+      </section>
+
+
     </header>
   </body>
 </html>
