i learneed more today

--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
             <li>Product</li>
             <li>Support</li>
           </ul>
-          <div>
+          <div id="hamburger-icon">
             <img src="assets/icon-hamburger.svg" alt="menu logo" />
           </div>
         </nav>
-              <div>
-        <h1>IMMERSIVE EXPIRIENCES THAT DELIVER</h1>
-      </div>
+        <div>
+          <h1>IMMERSIVE EXPIRIENCES THAT DELIVER</h1>
+        </div>
       </section>
-
-
     </header>
   </body>
 </html>
