we worked on the mobile today

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    
     <!-- header -->
     <header>
       <section class="container">
@@ -24,10 +25,10 @@
             <li>Support</li>
           </ul>
           <div id="hamburger-icon">
-            <img src="assets/icon-hamburger.svg" alt="menu logo" />
+            <img src="assets/icon-hamburger.svg" alt="menu logo"  />
           </div>
         </nav>
-        <div>
+        <div id="IMMERSIVE">
           <h1>IMMERSIVE EXPIRIENCES THAT DELIVER</h1>
         </div>
       </section>
