--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       </div>
        
      </section>
-     </main>
+     <!-- section-2 -->
+    <section> 
+          <div id="div-for-creations">
+            <h1>OUR CREATIONS</h1>
+            <button id="desktop-btn">SEE ALL<button>
+          </div>
+
+    </section> 
+    </main>
   </body>
 </html>
