imgs in the 3rd section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </section>
      <!-- section-2 -->
     <section id="section-2" class="container"> 
-          <div id="div-for-creations">
+          <div class="div-for-creations">
             <h1>OUR CREATIONS</h1>
             <button id="desktop-btn">SEE ALL</button>
           </div>
@@ -82,8 +82,39 @@
 
           </div>
          
-          
+        <div class="div-for-creations">
+          <!-- moblie bnt -->
+           <button id="mobile-btn"> SEE ALL </button>
+        </div>  
     </section> 
 
     </main>
+    <!-- footer -->
+    <footer>
+      <section class="container" id="footer-inner">
+        <!-- div-1 -->
+         <div>
+          <div id="footer-logo-wrapper">
+            <img src="assets/logo.svg" alt="nav logo" />
+          </div>
+          <ul>
+            <li>About</li>
+            <li>Careers</li>
+            <li>Events</li>
+            <li>Product</li>
+            <li>Support</li>
+          </ul>
+         </div>
+         <!-- div-2 -->
+          <div> 
+            <div>
+              <img src="assets/icon-facebook.svg" alt="facebook">
+              <img src="assets/icon-twitter.svg" alt="twitter">
+              <img src="assets/icon-pinterest.svg" alt="pinterset">
+              <img src="assets/icon-instagram.svg" alt="icon-instagram">
+            </div>
+            <p> &copy; 2021 loopstudios. All rights reserved</p>
+          </div>
+      </section>
+    </footer>
   </body>
