--- a/index.html
+++ b/index.html
@@ -95,25 +95,26 @@
         <!-- div-1 -->
          <div>
           <div id="footer-logo-wrapper">
-            <img src="assets/logo.svg" alt="nav logo" />
+            <img src="assets/logo.svg" alt="nav logo" id="loopstudios-img" />
           </div>
-          <ul>
-            <li>About</li>
-            <li>Careers</li>
-            <li>Events</li>
-            <li>Product</li>
-            <li>Support</li>
+          <ul id="footer-ul">
+            <li class="footer-list">About</li>
+            <li class="footer-list">Careers</li>
+            <li class="footer-list">Events</li>
+            <li class="footer-list">Product</li>
+            <li class="footer-list">Support</li>
           </ul>
          </div>
+          
          <!-- div-2 -->
           <div> 
-            <div>
-              <img src="assets/icon-facebook.svg" alt="facebook">
-              <img src="assets/icon-twitter.svg" alt="twitter">
-              <img src="assets/icon-pinterest.svg" alt="pinterset">
-              <img src="assets/icon-instagram.svg" alt="icon-instagram">
+            <div id="footer-icons">
+              <img src="assets/icon-facebook.svg" alt="facebook" class="icons">
+              <img src="assets/icon-twitter.svg" alt="twitter" class="icons">
+              <img src="assets/icon-pinterest.svg" alt="pinterset" class="icons">
+              <img src="assets/icon-instagram.svg" alt="icon-instagram" class="icons">
             </div>
-            <p> &copy; 2021 loopstudios. All rights reserved</p>
+            <p id="copyright"> &copy; 2021 loopstudios. All rights reserved</p>
           </div>
       </section>
     </footer>
