--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           
          <!-- div-2 -->
           <div> 
-            <div id="footer-icons">
+            <div id="footer-icons" class="container">
               <img src="assets/icon-facebook.svg" alt="facebook" class="icons">
               <img src="assets/icon-twitter.svg" alt="twitter" class="icons">
               <img src="assets/icon-pinterest.svg" alt="pinterset" class="icons">
